--- a/app/src/main/res/layout/item_rv.xml
+++ b/app/src/main/res/layout/item_rv.xml
@@ -28,15 +28,14 @@
         <TextView
             android:id="@+id/titleTextView"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="16dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
             android:text="accusamus beatae ad facilis cum similique qui sunt"
             android:textStyle="bold"
             android:textSize="16sp"
             android:gravity="center_vertical"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintTop_toTopOf="@id/image"
+            card_view:layout_constraintBottom_toBottomOf="@id/image"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@id/image"/>
 
